--- a/css/phone-style.css
+++ b/css/phone-style.css
@@ -1,18 +1,27 @@
+.header {
+  width: 100%;
+}
 .header .container {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
 }
 .header .container .nav ul {
-  width: 80%;
+  width: 100%;
   padding: 0;
 }
 .header .container .nav ul li a {
   width: 120px;
 }
+.header .landing {
+  width: 100%;
+}
 .header .landing .child-container {
-  width: 400px;
+  width: 100%;
+  border: 1px solid red;
+
 }
 .header .landing .child-container .img img {
   width: 100%;
@@ -38,6 +47,7 @@
 }
 .explore {
   height: auto;
+  border: 1px solid red;
 }
 .explore .container {
   grid-template-columns: repeat(1, 1fr);
